# PyPARC

./: .gitignore  README.md  pyproject.toml
examples/: parc_example_1.py  parc_example_2.py
src/parc/: parc.py
tests/: test_parc.py
