[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyparc"
version = "2.0.4"
authors = [
  { name="Alberto Bemporad", email="alberto.bemporad@imtlucca.it" },
]
description = "PARC - Piecewise Affine Regression and Classification"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["numpy","scipy","scikit-learn","matplotlib","pypoman","mip","faiss-cpu","pickle-mixin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["piecewise linear regression", "piecewise linear classification",
    "multivariate regression", "multivariate classification", "supervised learning"]

[project.urls]
"Homepage" = "http://cse.lab.imtlucca.it/~bemporad/parc"